fix align

--- a/sass/section/_modal.scss
+++ b/sass/section/_modal.scss
@@ -68,6 +68,7 @@
       margin-bottom: 40px;
       letter-spacing: 4px;
       position: relative;
+      text-align: left;
       text-transform: uppercase;
 
       &:after {
@@ -82,6 +83,8 @@
     }
 
     .modal-content__poem-content {
+      text-align: left;
+
       p {
         line-height: 1.4em;
       }
